--- a/src/main/frontend/index.html
+++ b/src/main/frontend/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<link rel="stylesheet" href="style/style.css">
 </head>
 <body>
 	<div class="container"></div>
