Added bootstrap cdn

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 </head>
 <body>
-	<div class="container"></div>
-	<script src="/bundle.js"></script>
+    <div class="container"></div>
+    <script src="/bundle.js"></script>
 </body>
 </html>
